@@ -1,4 +1,5 @@
 March 2012 3.7
+  - login: support bind user for login search
   - Fixed bugs:
    -> DHCP: error message not displayed properly (3441975)
    -> Profile loading not possible if required fields are not filled (3444948)
